# greppin-logs

./: .dockerignore  .gitignore  LICENSE  README.md
aws-lambda/cdk-app/: README.md  app.py  pyproject.toml
aws-lambda/cdk-app/cdk_app/: __init__.py  logs_stack.py
aws-lambda/lambda-functions/process-logs/: pyproject.toml
aws-lambda/lambda-functions/process-logs/process_logs/: lambda_function.py
command-line/: Dockerfile  cloudtrail2csv.sh  csvlook-demo.sh  jq-demo.sh  parallel-processing-demo.sh
datasets/: employees.csv  salaries.csv
