[tool.poetry]
name = "greppin-logs.process-logs"
version = "0.1.0"
description = "Grep logs written to an S3 bucket."
authors = ["Noah Rubin <noah.rubin@strozfriedberg.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
boto3 = "1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
